--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
             <div class="card-body">
               <h4>Monitor</h4>
               <p class="fecha">1 de Enero del 2024</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Los monitores gamers son dispositivos de alta frecuencia de actualización y baja latencia, con resolución HD o 4K, ideales para una experiencia inmersiva y fluida en videojuegos competitivos.</p>
             </div>
           </div>
 
@@ -86,8 +85,7 @@
             <div class="card-body">
               <h4>Teclado</h4>
               <p class="fecha">1 de Enero del 2024</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Los teclados gamer ofrecen retroiluminación personalizable, interruptores mecánicos para una respuesta táctil precisa y macros programables para mejorar la eficiencia en los juegos, brindando una experiencia de juego ergonómica y personalizada.</p>
             </div>
           </div>
 
@@ -96,8 +94,7 @@
             <div class="card-body">
               <h4>Mouse</h4>
               <p class="fecha">1 de Enero del 2024</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Los mouse gamers ofrecen sensores de alta precisión, diseño ergonómico para largas sesiones de juego, botones programables para acciones rápidas y tasas de respuesta ajustables, proporcionando un control preciso y ágil en cualquier situación de juego.</p>
             </div>
           </div>
 
@@ -106,8 +103,7 @@
             <div class="card-body">
               <h4>Silla</h4>
               <p class="fecha">1 de Enero del 2024</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Las sillas gaming proporcionan comodidad ergonómica con soporte lumbar y cervical ajustable, materiales transpirables para largas sesiones, reposabrazos ajustables y bases estables, asegurando una postura adecuada y confort durante horas de juego.</p>
             </div>
           </div>
 
@@ -116,8 +112,7 @@
             <div class="card-body">
               <h4>Mousepad</h4>
               <p class="fecha">1 de Enero del 2024</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Los mousepad para gamers ofrecen superficies lisas de baja fricción para un deslizamiento suave del ratón, bases antideslizantes para estabilidad, y dimensiones amplias para movimientos amplios y precisos, optimizando la experiencia de juego.</p>
             </div>
           </div>
 
@@ -126,8 +121,7 @@
             <div class="card-body">
               <h4>Audifonos</h4>
               <p class="fecha">1 de Enero del 2024</p>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Los audífonos gaming ofrecen sonido envolvente 7.1, micrófono retráctil o desmontable para una comunicación clara, almohadillas cómodas para largas sesiones, y compatibilidad con diferentes plataformas, proporcionando una experiencia inmersiva y competitiva en juegos.</p>
             </div>
           </div>
         </div>
@@ -137,12 +131,22 @@
             <h3>¿Periféricos gamer?</h3>
           </div>
           <div class="texto-info">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ipsa. Vitae dolore, adipisci quidem esse
-              alias tempora libero dolorum recusandae dicta deserunt nulla nostrum suscipit non aliquam illo incidunt
-              id. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab eligendi commodi exercitationem! Fugiat
-              aliquid officiis fugit, sit eum sequi tempora, similique ea rerum saepe placeat quam? Iusto earum corporis
-              sapiente.
-            </p>
+            <p>Los periféricos gamers representan una industria en constante evolución, ofreciendo una gama diversa de dispositivos diseñados para mejorar la experiencia de juego. Desde monitores con altas tasas de actualización y resoluciones nítidas hasta teclados con interruptores mecánicos y retroiluminación personalizable, estos productos están diseñados para satisfacer las demandas de los jugadores más exigentes.
+              <br>
+              <br>
+              Los monitores gamers, con sus tecnologías de alta frecuencia de actualización y baja latencia, ofrecen una reproducción fluida de imágenes, crucial para juegos de ritmo rápido donde cada milisegundo cuenta. Las resoluciones HD, Full HD, 4K e incluso 8K brindan una calidad visual impresionante, sumergiendo a los jugadores en mundos virtuales vibrantes y detallados.
+              <br>
+              <br>
+              Los teclados gamers, equipados con interruptores mecánicos que ofrecen una respuesta táctil distintiva, permiten una entrada precisa y rápida de comandos. La retroiluminación RGB no solo añade un toque estético, sino que también ayuda a los jugadores a encontrar teclas en entornos oscuros. Además, la capacidad de programar macros personalizadas permite ejecutar acciones complejas con solo tocar un botón.
+              <br>
+              <br>
+              Los mouse gamers son otro componente crucial, con sensores de alta precisión que garantizan movimientos suaves y precisos en todo momento. Los botones programables y los perfiles ajustables permiten una personalización completa para adaptarse a diferentes estilos de juego y preferencias individuales. Los mousepads diseñados específicamente para juegos proporcionan una superficie optimizada para el deslizamiento suave del mouse, garantizando un seguimiento preciso en todas las situaciones.
+              <br>
+              <br>
+              Las sillas gaming, a menudo pasadas por alto pero igualmente importantes, ofrecen comodidad ergonómica durante largas sesiones de juego. Con soporte lumbar ajustable, reposabrazos acolchados y bases estables, estas sillas están diseñadas para reducir la fatiga y mejorar la postura, permitiendo a los jugadores mantenerse cómodos y concentrados durante horas.
+              <br>
+              <br>
+              Finalmente, los audífonos gamers completan el conjunto, proporcionando una experiencia de audio inmersiva con sonido envolvente y cancelación de ruido. Los micrófonos de alta calidad garantizan una comunicación clara durante el juego en equipo, mientras que las almohadillas cómodas permiten sesiones de juego prolongadas sin incomodidad.
           </div>
         </div>
 
@@ -152,19 +156,10 @@
             <h3>Donde comprar periféricos gamers?</h3>
           </div>
           <div class="texto-main">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ipsa. Vitae dolore, adipisci quidem esse
-              alias tempora libero dolorum recusandae dicta deserunt nulla nostrum suscipit non aliquam illo incidunt
-              id. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab eligendi commodi exercitationem! Fugiat
-              aliquid officiis fugit, sit eum sequi tempora, similique ea rerum saepe placeat quam? Iusto earum corporis
-              sapiente.
-            </p>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ipsa. Vitae dolore, adipisci quidem esse
-              alias tempora libero dolorum recusandae dicta deserunt nulla nostrum suscipit non aliquam illo incidunt
-              id. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab eligendi commodi exercitationem! Fugiat
-              aliquid officiis fugit, sit eum sequi tempora, similique ea rerum saepe placeat quam? Iusto earum corporis
-              sapiente.
-            </p>
+            <p>Los periféricos gamers se pueden encontrar en una amplia gama de lugares, desde plataformas de comercio electrónico líderes como Amazon y eBay hasta sitios especializados en tecnología como Newegg y B&H. Además, tiendas físicas como Best Buy y Walmart ofrecen una selección variada de estos productos. También hay tiendas especializadas en gaming, tanto en línea como físicas, que se centran exclusivamente en productos diseñados para mejorar la experiencia de juego. 
+              <br>
+              <br>
+            Con una disponibilidad tan extensa, los jugadores tienen la flexibilidad de comparar precios, leer reseñas y elegir entre una variedad de marcas y modelos para encontrar los periféricos que se ajusten a sus necesidades y presupuesto. Además, la compra en línea ofrece la conveniencia de la entrega directa a domicilio, mientras que las tiendas físicas brindan la oportunidad de probar los productos antes de comprarlos. En resumen, ya sea que los jugadores busquen monitores de alta frecuencia de actualización, teclados con retroiluminación RGB, mouse con sensores de precisión o sillas gaming ergonómicas, hay una amplia gama de opciones disponibles en múltiples lugares para satisfacer todas sus necesidades de juego.</p>
           </div>
         </div>
       </section>
